tests/expectations/parser/functions/spaced_annotation_fail.out
Error [EPAR0370005]: expected an identifier, 'program' -- found 'test'
    --> test:3:3
     |
   3 | @ test
     |   ^^^^
